<resources>
    <string name="imsafe_description">
        The “IMSAFE” acronym is a personal checklist that ensures the following statement
        is valid: \nI’m physically and mentally safe to fly.</string>
    <string name="stress">Stress</string>
    <string name="physically_and_mentally_fit_for_flight">Physically and mentally fit for flight.</string>
    <string name="no_excessive_stress_or_emotional_strain">No excessive stress or emotional strain.</string>
    <string name="no_recent_traumatic_events_affecting_mental_state">No recent traumatic events affecting mental state.</string>
    <string name="adequate_coping_mechanisms_for_stress">Adequate coping mechanisms for stress.</string>
    <string name="no_unresolved_personal_or_professional_issues">No unresolved personal or professional issues.</string>
    <string name="alcohol">Alcohol</string>
    <string name="no_alcohol_consumed_within_the_last_8_hours">No alcohol consumed within the last 8 hours.</string>
    <string name="blood_alcohol_level_within_legal_limits">Blood alcohol level within legal limits.</string>
    <string name="considered_the_effects_of_alcohol_on_hydration">Considered the effects of alcohol on hydration.</string>
    <string name="no_hangover_or_residual_alcohol_effects">No hangover or residual alcohol effects.</string>
    <string name="continue_to_fatigue_section">Continue to Fatigue Section</string>
    <string name="emotion">Emotion</string>
    <string name="hydrated_and_well_nourished">Hydrated and well-nourished.</string>
    <string name="consumed_a_balanced_meal_within_the_last_4_hours">Consumed a balanced meal within the last 4 hours.</string>
    <string name="considered_the_timing_of_meals_to_avoid_fatigue">Considered the timing of meals to avoid fatigue.</string>
    <string name="positive_emotional_outlook_toward_the_flight">Positive emotional outlook toward the flight.</string>
    <string name="no_unresolved_conflicts_impacting_emotional_well_being">No unresolved conflicts impacting emotional well-being.</string>
    <string name="home">Home</string>
    <string name="well_rested_and_free_from_fatigue">Well-rested and free from fatigue.</string>
    <string name="adhered_to_duty_rest_regulations">Adhered to duty/rest regulations.</string>
    <string name="no_signs_of_physical_or_mental_exhaustion">No signs of physical or mental exhaustion.</string>
    <string name="avoided_consecutive_long_work_shifts">Avoided consecutive long work shifts.</string>
    <string name="utilized_fatigue_risk_management_strategies">Utilized fatigue risk management strategies.</string>
    <string name="continue_to_emotion_section">Continue to Emotion Section</string>
    <string name="illness">Illness</string>
    <string name="no_symptoms_of_illness_fever_nausea_dizziness_etc">No symptoms of illness (fever, nausea, dizziness, etc.)</string>
    <string name="no_recent_illness_that_may_impair_cognitive_or_physical_function">No recent illness that may impair cognitive or physical function.</string>
    <string name="no_recent_surgery_or_medical_procedure">No recent surgery or medical procedure.</string>
    <string name="checked_for_allergies_that_may_impact_the_flight">Checked for allergies that may impact the flight.</string>
    <string name="continue_to_medication_section">Continue to Medication Section</string>
    <string name="purpose_of_imsafe_evaluation">Purpose of IMSAFE Evaluation</string>
    <string name="the_imsafe_checklist_is_a_personal_health_assessment_used_to_ensure_the_pilot_is_healthy_before_each_flight_the_letters_stand_for_illness_medication_stress_alcohol_fatigue_emotions_by_reviewing_these_elements_of_the_checklist_the_pilot_can_conclude_whether_he_she_is_personally_fit_to_fly">The IMSAFE checklist is a personal health assessment used to ensure the pilot is healthy before each flight. The letters stand for; Illness, Medication, Stress, Alcohol, Fatigue, Emotions. By reviewing these elements of the checklist, the pilot can conclude whether he/she is personally fit to fly.</string>
    <string name="continue_to_illness_section">Continue to Illness Section</string>
    <string name="select_an_option_below">Select an Option Below:</string>
    <string name="perform_imsafe_evaluation">Perform IMSAFE Evaluation</string>
    <string name="review_faa_rules_amp_regulations"><![CDATA[Review FAA Rules & Regulations]]></string>
    <string name="past_results">Past Results</string>
    <string name="aviation_medical_resources">Aviation Medical Resources</string>
    <string name="medication">Medication</string>
    <string name="checked_and_verified_all_medications_for_aviation_compatibility">Checked and verified all medications for aviation compatibility.</string>
    <string name="no_use_of_over_the_counter_medications_that_may_impair_performance">No use of over-the-counter medications that may impair performance.</string>
    <string name="verified_that_medications_do_not_violate_aviation_regulations">Verified that medications do not violate aviation regulations.</string>
    <string name="informed_aviation_medical_examiner_about_medications">Informed aviation medical examiner about medications.</string>
    <string name="continue_to_stress_section">Continue to Stress Section</string>
    <string name="continue_to_alcohol_section">Continue to Alcohol Section</string>
    <string name="app_name">Pilot Preflight IMSAFE Checklist</string>
<!--    <string name="regulations_text">    The IMSAFE checklist helps pilots and co-pilots determine if they are fit to fly. It is critically important that every pilot conduct a personal pre-flight health assessment before piloting any aircraft.-->

    <string name="regulations_text">
        The IMSAFE checklist helps pilots and co-pilots determine if they are fit to fly. It is critically important that every pilot conduct a personal pre-flight health assessment before piloting any aircraft.\n
        There are myriad physiological and psychological factors that could impair a pilot’s ability and render a flight unsafe. The IMSAFE checklist ensures pilots meet the standards in Title 14 Code of Federal Regulations (14 CFR) part 67 before any flight. \n

    IMSAFE stands for:\n
        Illness:\n Do you have current or recent illnesses that could affect flight?
        \n Medication:\n Have you been taking any meds that could impair your ability to fly?
        \n Stress:\n Are you experiencing unusual psychological pressure and/or anxiety?
        \n Alcohol:\n Have you had any alcohol in the last eight hours? Are you hungover?
        \n Fatigue:\n Are you tired and/or not adequately rested?
        \n Emotion:\n Are you emotionally upset?

</string>
    <string name="regulations_text2">
        The IMSAFE checklist helps pilots and co-pilots determine if they are fit to fly. It is critically important that every pilot conduct a personal pre-flight health assessment before piloting any aircraft.\n
        There are myriad physiological and psychological factors that could impair a pilot’s ability and render a flight unsafe. The IMSAFE checklist ensures pilots meet the standards in Title 14 Code of Federal Regulations (14 CFR) part 67 before any flight. \n

    IMSAFE stands for:\n
        Illness: Do you have current or recent illnesses that could affect flight?
        \n Medication: Have you been taking any meds that could impair your ability to fly?
        \n Stress: Are you experiencing unusual psychological pressure and/or anxiety?
        \n Alcohol: Have you had any alcohol in the last eight hours? Are you hungover?
        \n Fatigue: Are you tired and/or not adequately rested?
        \n Emotion: Are you emotionally upset?

</string>
    <string name="complete_evaluation">Complete Evaluation</string>
    <string name="return_home">Return Home</string>
    <string name="welcome_pilot">Welcome, Pilot!</string>
    <string name="fatigue">Fatigue</string>
    <string name="evaluation_results">Evaluation Results</string>
    <string name="previous_exam_date">Previous Exam Date</string>
    <string name="select_date"><![CDATA[Select Date -->]]></string>
    <string name="select_a_date">Select a date.</string>
    <string name="weather_resources">Weather Resources</string>
    <string name="loading_weather">Loading Weather...</string>


</resources>