<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmotionActivity">

    <TextView
        android:id="@+id/emotion_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/emotion"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Headline"
        />
    <GridLayout
        android:id="@+id/emotion_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:layout_below="@id/emotion_header_text"
        android:paddingHorizontal="10dp"
        >
        <CheckBox
            android:id="@+id/emotion_symptom_checkbox"
            android:text="@string/hydrated_and_well_nourished"
            />
        <CheckBox
            android:id="@+id/emotion_past_meal"
            android:text="@string/consumed_a_balanced_meal_within_the_last_4_hours"
            />
        <CheckBox
            android:id="@+id/emotion_future_meal"
            android:text="@string/considered_the_timing_of_meals_to_avoid_fatigue"
            />
        <CheckBox
            android:id="@+id/emotion_outlook"
            android:text="@string/positive_emotional_outlook_toward_the_flight"
            />
        <CheckBox
            android:id="@+id/emotion_normal"
            android:text="@string/no_unresolved_conflicts_impacting_emotional_well_being"
            />
    </GridLayout>
    <Button
        android:id="@+id/complete_evaluation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/emotion_grid"
        android:layout_centerHorizontal="true"
        style="@style/landing_button"
        android:text="@string/complete_evaluation"
        />
    <Button
        android:id="@+id/imsafe_continue_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/complete_evaluation_button"
        android:layout_centerHorizontal="true"
        style="@style/landing_button"
        android:text="@string/home"
        />

</RelativeLayout>