<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlcoholActivity">

    <TextView
        android:id="@+id/alcohol_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/alcohol"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Headline"
        />
    <GridLayout
        android:id="@+id/alcohol_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:layout_below="@id/alcohol_header_text"
        android:paddingHorizontal="10dp"
        >
        <CheckBox
            android:id="@+id/alcohol_consume_checkbox"
            android:text="@string/no_alcohol_consumed_within_the_last_8_hours"
            />
        <CheckBox
            android:id="@+id/alcohol_bac"
            android:text="@string/blood_alcohol_level_within_legal_limits"
            />
        <CheckBox
            android:id="@+id/alcohol_hydrate"
            android:text="@string/considered_the_effects_of_alcohol_on_hydration"
            />
        <CheckBox
            android:id="@+id/alcohol_hangover"
            android:text="@string/no_hangover_or_residual_alcohol_effects"
            />
    </GridLayout>
    <Button
        android:id="@+id/imsafe_continue_fatigue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/alcohol_grid"
        android:layout_centerHorizontal="true"
        style="@style/landing_button"
        android:text="@string/continue_to_fatigue_section"
        />

</RelativeLayout>