<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StressActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/stress_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <TextView
        android:id="@+id/stress_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/stress_toolbar"
        android:text="@string/stress"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Headline"
        />
    <GridLayout
        android:id="@+id/stress_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:layout_below="@id/stress_header_text"
        android:paddingHorizontal="10dp"
        >
        <CheckBox
            android:id="@+id/stress_symptom_checkbox"
            android:text="@string/physically_and_mentally_fit_for_flight"
            />
        <CheckBox
            android:id="@+id/stress_impair_checkbox"
            android:text="@string/no_excessive_stress_or_emotional_strain"
            />
        <CheckBox
            android:id="@+id/stress_recent_event_checkbox"
            android:text="@string/no_recent_traumatic_events_affecting_mental_state"
            />
        <CheckBox
            android:id="@+id/stress_coping_checkbox"
            android:text="@string/adequate_coping_mechanisms_for_stress"
            />
        <CheckBox
            android:id="@+id/stress_unresolved_checkbox"
            android:text="@string/no_unresolved_personal_or_professional_issues"
            />
    </GridLayout>
    <Button
        android:id="@+id/imsafe_continue_alc_button"
        android:padding="10px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stress_grid"
        android:layout_centerHorizontal="true"
        style="@style/landing_button"
        android:text="@string/continue_to_alcohol_section"
        />

</RelativeLayout>