<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IllnessActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/illness_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <TextView
        android:id="@+id/illness_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/illness_toolbar"
        android:text="@string/illness"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Headline"
        />
    <GridLayout
        android:id="@+id/illness_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:layout_below="@id/illness_header_text"
        android:paddingHorizontal="10dp"
        >
        <CheckBox
            android:id="@+id/illness_symptom_checkbox"
            android:text="@string/no_symptoms_of_illness_fever_nausea_dizziness_etc"
            />
        <CheckBox
            android:id="@+id/illness_impair"
            android:text="@string/no_recent_illness_that_may_impair_cognitive_or_physical_function"
            />
        <CheckBox
            android:id="@+id/illness_recent_proc"
            android:text="@string/no_recent_surgery_or_medical_procedure"
            />
        <CheckBox
            android:id="@+id/illness_allergies"
            android:text="@string/checked_for_allergies_that_may_impact_the_flight"
            />
    </GridLayout>
    <Button
        android:id="@+id/imsafe_continue_med_button"
        android:padding="10px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/illness_grid"
        android:layout_centerHorizontal="true"
        style="@style/landing_button"
        android:text="@string/continue_to_medication_section"
        />

</RelativeLayout>