<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FatigueActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fatigue_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <TextView
        android:id="@+id/fatigue_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fatigue_toolbar"
        android:text="Fatigue"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Headline"
        />
    <GridLayout
        android:id="@+id/fatigue_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:layout_below="@id/fatigue_header_text"
        android:paddingHorizontal="10dp"
        >
        <CheckBox
            android:id="@+id/fatigue_symptom_checkbox"
            android:text="@string/well_rested_and_free_from_fatigue"
            />
        <CheckBox
            android:id="@+id/fatigue_duty_limits"
            android:text="@string/adhered_to_duty_rest_regulations"
            />
        <CheckBox
            android:id="@+id/fatigue_mental"
            android:text="@string/no_signs_of_physical_or_mental_exhaustion"
            />
        <CheckBox
            android:id="@+id/fatigue_work_hours"
            android:text="@string/avoided_consecutive_long_work_shifts"
            />
        <CheckBox
            android:id="@+id/fatigue_management"
            android:text="@string/utilized_fatigue_risk_management_strategies"
            />
    </GridLayout>
    <Button
        android:id="@+id/imsafe_continue_emotion_button"
        android:padding="10px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fatigue_grid"
        android:layout_centerHorizontal="true"
        style="@style/landing_button"
        android:text="@string/continue_to_emotion_section"
        />

</RelativeLayout>